--- a/.bablerc
+++ b/.bablerc
@@ -4,6 +4,14 @@
         "react",
     ],
     "plugins": [
-       "transform-runtime"
+       "transform-runtime",
+       [
+        'import',
+            {
+                libraryName: "antd",
+                libraryDirectory: 'es',
+                style: true,
+            },
+        ],
     ]
 }
