--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "@babel/preset-react": "^7.13.13",
     "@types/react": "^17.0.9",
     "@types/react-dom": "^17.0.6",
+    "antd": "^4.16.1",
     "babel-loader": "^8.0.5",
+    "babel-plugin-import": "^1.13.3",
     "cross-env": "^7.0.3",
     "css-loader": "^5.2.6",
     "html-webpack-plugin": "^5.0.0-beta.6",
@@ -44,7 +46,9 @@
     "postcss-loader": "^5.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "style-loader": "^2.0.0",
+    "styled-components": "^5.3.0",
     "webpack": "^5.38.1",
     "webpack-cli": "^4.7.0",
     "webpack-dev-server": "^3.11.2",
